chore: Fix spacing, css, homepg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,12 +73,12 @@ h3 {
 
 .title {
   margin-top: 80px;
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .subtitle {
   margin: 0;
-  font-size: 28px;
+  font-size: 25px;
   line-height: 3.75;
   /* margin-top: 80px; */
   padding-top: 80px;
@@ -87,7 +87,7 @@ h3 {
 
 p {
   font-family: "Montserrat", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 900;
 }
 
@@ -290,6 +290,10 @@ footer {
   bottom: 0px;
   left: 0px;
   font-family: "Shadows Into Light", cursive;
+}
+
+#homepage-footer {
+  margin-top: 100px; 
 }
 
 /* projects */
